@@ -1,0 +1,26 @@
+PLUGINS=counters:accept
+
+MAXMSGS=1
+export MAXMSGS
+
+sfecho <<EOF
+MAIL FROM:<notbounce@example.com>
+RCPT TO:<addr@example.net>
+DATA
+.
+MAIL FROM:<notbounce@example.com>
+RCPT TO:<addr@example.net>
+DATA
+.
+EOF
+
+unset MAXMSGS
+<result>
+250 Sender='notbounce@example.com'.^M
+250 Recipient='addr@example.net'.^M
+354 End your message with a period on a line by itself.^M
+250 Received 0 bytes.^M
+550 5.5.0 Too many messages^M
+503 5.5.1 You must send MAIL FROM: first^M
+503 5.5.1 You must send MAIL FROM: first^M
+500 5.5.1 Not implemented.^M
