@@ -1,3 +1,5 @@
+
+- Added support for limiting the number of messages to plugin-counters.
 -------------------------------------------------------------------------------
 Changes in version 2.00
 
